What's new in PyObjC
====================

An overview of the relevant changes in new, and older, releases.

Version 3.0
-----------

* Addd ``objc.autorelease_pool``, a context manager for managing an
  autorelease pool. Usage::

       with objc.autorelease_pool():
          pass


  This is equivalent to::

       _pool = NSAutoreleasePool.alloc().init()
       try:
           pass

       finally:
           del _pool

* Added ``objc.registerABCForClass`` to make it possible to register
  a class with a number of ABC classes when the class becomes available.

* ``NSDecimalNumber`` can now be instantatiated as a normal Python object::

     value = NSDecimalNumber(4)

* ``NSData`` and ``NSMutableData`` can now be instantiated as a normal
  Python object::

      value = NSData(someBytes)

   or::

      value = NSData()

* ``NSDecimal`` now coerces the other value to ``NSDecimal`` in coercions.
  Because of you can now order instances of ``NSDecimal`` and ``int``.

* ``PyObjCTools.KeyValueCoding.ArrayOperators`` and
  ``PyObjCTools.KeyValueCoding.arrayOperators`` were accidently public
  names in previous releases, and are now removed. Use the array operators
  in the KVC protocol instead.

* Restructured the "convenience" method code. This shouldn't have user
  visible effects, but makes the code easier to maintain.

* ``objc.addConvienceForSelector`` no longer exists, it isn't possible
  to provide this functionality with the current implementation of the
  bridge.

* The build of pyobjc-core can now be configured by editing setup.cfg (or
  providing arguments to the build_ext command), instead of editing the
  setup.py file.

  Currently the following options are availabel for the build_ext command:

  * ``--use-system-libffi``: When this option is used the build will use
    /usr/lib/libffi.dylib instead of the embedded copy of libffi. The latter
    is the default is and is better tested.
